tests/type-errors/dec_lit_error.arl
archetype dec_lit_error

variable dtz  : tez = 1.23456789tz

entry exec () {
  ()
}
